kubernetes/infrastructure/security/crowdsec/config/middleware-opnsense-allowlist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-opnsense-allowlist
  namespace: crowdsec
spec:
  ipAllowList:
    sourceRange:
      - 192.168.10.1/32
