kubernetes/infrastructure/security/crowdsec/config/ingress-lapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crowdsec-lapi
  namespace: crowdsec
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: crowdsec-crowdsec-opnsense-allowlist@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-lan-https-insecure@kubernetescrd
    external-dns.kubernetes.io/hostname: crowdsec.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: crowdsec.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crowdsec-service
                port:
                  number: 8080
